--- a/SkillLab6.ipynb
+++ b/SkillLab6.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "first = input(\"Enter a first name:\")\n",
     "last = input(\"Enter a last name:\")\n",
-    "fullName = \"The full name is \" + first + \" \" + last\n",
+    "fullName = \"This person's full name is \" + first + \" \" + last\n",
     "print(fullName)"
    ]
   }
